// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Content Bucket 3 Slice Slice matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1sr0a1l"
  >
    <div
      class="css-1klr24i"
    >
      <div
        class="css-15edd2j"
      >
        <hr
          aria-hidden="true"
          class="css-uh7mej"
          data-testid="divider"
        />
      </div>
      <div
        class="css-13tedu1"
      >
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1b00ppc"
          >
            <div
              class="css-1nw1nne"
            >
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Sarcacens an inclusive club? They didnt look out for me"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
              <div
                class="css-17cghxi"
              >
                <p
                  class="css-1khw599"
                >
                  Sarcacens an inclusive club? They didnt look
                </p>
                <div
                  class="css-i1f2uq"
                >
                  <span
                    class="css-t7ynxc"
                  >
                    LIVE
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      INTERVIEW
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      MARTIN SAMUEL
                    </div>
                  </span>
                </div>
                <a
                  class="css-17mo6gr"
                  href="https://www.thetimes.co.uk"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1qa0j03"
                    >
                      Sarcacens an inclusive club? They didnt look out for me
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-zhtub2"
                      >
                        Review
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1vzvkql"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-11l110t"
            >
              <hr
                aria-hidden="true"
                class="css-54gf6u"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1nw1nne"
            >
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Sarcacens an inclusive club? They didnt look out for me"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
              <div
                class="css-17cghxi"
              >
                <p
                  class="css-1khw599"
                >
                  Sarcacens an inclusive club? They didnt look
                </p>
                <div
                  class="css-i1f2uq"
                >
                  <span
                    class="css-t7ynxc"
                  >
                    LIVE
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      INTERVIEW
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      MARTIN SAMUEL
                    </div>
                  </span>
                </div>
                <a
                  class="css-17mo6gr"
                  href="https://www.thetimes.co.uk"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-1qa0j03"
                    >
                      Sarcacens an inclusive club? They didnt look out for me
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-zhtub2"
                      >
                        Review
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1vzvkql"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-13byt3y"
      >
        <div
          class="css-15edd2j"
        >
          <div
            class="css-1g5vzsh"
            id="COMMENT STACK"
          >
            <hr
              aria-hidden="true"
              class="css-obfal1"
              data-testid="divider"
            />
          </div>
          <div
            class="css-1704wtt"
          >
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
                <div
                  class="css-eu36n0"
                  data-testid="tag-and-flag"
                >
                  <span
                    class="css-1vzvkql"
                  >
                    3 mins ago
                  </span>
                </div>
              </div>
            </div>
            <hr
              aria-hidden="true"
              class="css-clg7cq"
              data-testid="divider"
            />
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes 2"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes 2
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
                <div
                  class="css-eu36n0"
                  data-testid="tag-and-flag"
                >
                  <span
                    class="css-1vzvkql"
                  >
                    21 mins ago
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-84gtiy"
    >
      <div
        class="css-1r4d587"
      >
        <hr
          aria-hidden="true"
          class="css-obfal1"
          data-testid="divider"
        />
      </div>
      <div
        class="css-11icnc2"
      >
        <div
          class="css-104c46d"
          data-testid="article-container"
          style="position: relative;"
        >
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="European cup winner Mihajlovic dies aged 53 after battle with leukaemia"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    UPDATED
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    PROFILE
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="‘American owners pose threat to English pyramid’"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    ‘American owners pose threat to English pyramid’
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="£60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    UPDATED
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    Q&A
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Blow for rebel clubs as court says Uefa can block Super League"
                  class="css-1qgqq71"
                  src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                />
              </picture>
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-i1f2uq"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Blow for rebel clubs as court says Uefa can block Super League
                  </span>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-po9buu"
            data-testid="divider"
          />
        </div>
      </div>
    </div>
    <div
      class="css-1osy5lm"
    >
      <div
        class="css-1frprgo"
      >
        <div
          class="css-1g5vzsh"
          id="COMMENT STACK"
        >
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
        </div>
        <div
          class="css-1704wtt"
        >
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
              <div
                class="css-eu36n0"
                data-testid="tag-and-flag"
              >
                <span
                  class="css-1vzvkql"
                >
                  3 mins ago
                </span>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-clg7cq"
            data-testid="divider"
          />
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes 2"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes 2
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
              <div
                class="css-eu36n0"
                data-testid="tag-and-flag"
              >
                <span
                  class="css-1vzvkql"
                >
                  21 mins ago
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Content Bucket 3 Slice Slice matches snapshot for \`null\` breakpoint value 1`] = `<DocumentFragment />`;

exports[`Render Content Bucket 3 Slice Slice matches snapshot for mobile 1`] = `
<DocumentFragment>
  <div
    class="css-1sr0a1l"
  >
    <div
      class="css-1klr24i"
    >
      <div
        class="css-15edd2j"
      >
        <hr
          aria-hidden="true"
          class="css-uh7mej"
          data-testid="divider"
        />
      </div>
      <div
        class="css-13tedu1"
      >
        <div
          class="css-13byt3y"
        >
          <div
            class="css-1b00ppc"
          >
            <div
              class="css-1nw1nne"
            >
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Sarcacens an inclusive club? They didnt look out for me"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
              <div
                class="css-17cghxi"
              >
                <p
                  class="css-1khw599"
                >
                  Sarcacens an inclusive club? They didnt look
                </p>
                <div
                  class="css-i1f2uq"
                >
                  <span
                    class="css-t7ynxc"
                  >
                    LIVE
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      INTERVIEW
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      MARTIN SAMUEL
                    </div>
                  </span>
                </div>
                <a
                  class="css-17mo6gr"
                  href="https://www.thetimes.co.uk"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-8gj81n"
                    >
                      Sarcacens an inclusive club? They didnt look out for me
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-zhtub2"
                      >
                        Review
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1vzvkql"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
            <div
              class="css-11l110t"
            >
              <hr
                aria-hidden="true"
                class="css-54gf6u"
                data-testid="divider"
              />
            </div>
            <div
              class="css-1nw1nne"
            >
              <div
                class="css-tj8oo8"
              >
                <hr
                  aria-hidden="true"
                  class="css-1i1gqyx"
                  data-testid="divider"
                />
              </div>
              <div
                class="css-uxw9nr"
              >
                <picture
                  class="css-zp0elg"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Sarcacens an inclusive club? They didnt look out for me"
                    class="css-1qgqq71"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
                  />
                </picture>
              </div>
              <div
                class="css-17cghxi"
              >
                <p
                  class="css-1khw599"
                >
                  Sarcacens an inclusive club? They didnt look
                </p>
                <div
                  class="css-i1f2uq"
                >
                  <span
                    class="css-t7ynxc"
                  >
                    LIVE
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      INTERVIEW
                    </div>
                  </span>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-btda8w"
                  >
                    <div
                      class="css-gb5m6n"
                    >
                      MARTIN SAMUEL
                    </div>
                  </span>
                </div>
                <a
                  class="css-17mo6gr"
                  href="https://www.thetimes.co.uk"
                  role="link"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Sarcacens an inclusive club? They didnt look out for me
                    </span>
                  </span>
                </a>
                <div
                  class="css-1atazsr"
                  data-testid="tag-and-flag"
                >
                  <a
                    class="css-10d4t8c"
                    href="/"
                  >
                    <span
                      class="css-17x5lw"
                    >
                      <span
                        class="css-zhtub2"
                      >
                        Review
                      </span>
                    </span>
                  </a>
                  <div
                    class="css-lew009"
                  >
                    <hr
                      aria-hidden="true"
                      class="css-15kf7hd"
                      data-testid="divider"
                    />
                  </div>
                  <span
                    class="css-1vzvkql"
                  >
                    4 min read
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-13byt3y"
      >
        <div
          class="css-15edd2j"
        >
          <div
            class="css-1g5vzsh"
            id="COMMENT STACK"
          >
            <hr
              aria-hidden="true"
              class="css-obfal1"
              data-testid="divider"
            />
          </div>
          <div
            class="css-1704wtt"
          >
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
                <div
                  class="css-eu36n0"
                  data-testid="tag-and-flag"
                >
                  <span
                    class="css-1vzvkql"
                  >
                    3 mins ago
                  </span>
                </div>
              </div>
            </div>
            <hr
              aria-hidden="true"
              class="css-clg7cq"
              data-testid="divider"
            />
            <div
              class="css-19w1t19"
            >
              <div
                class="css-1kwj960"
              >
                <picture
                  class="css-33c418"
                >
                  <div
                    class="css-5pczz7"
                  />
                  <img
                    alt="Deborah Haynes 2"
                    class="css-1t6p58q"
                    src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                    width="77px"
                  />
                </picture>
              </div>
              <div
                class="css-lq9usb"
              >
                <a
                  class="css-gull0f"
                  href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
                >
                  <span
                    class="css-17x5lw"
                  >
                    <span
                      class="css-65zrxz"
                    >
                      Deborah Haynes 2
                    </span>
                  </span>
                </a>
                <p
                  class="css-d8s6u6"
                >
                  Now is Willis’s chance to show he’s got more to offer than Curry
                </p>
                <div
                  class="css-eu36n0"
                  data-testid="tag-and-flag"
                >
                  <span
                    class="css-1vzvkql"
                  >
                    21 mins ago
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-84gtiy"
    >
      <div
        class="css-1r4d587"
      >
        <hr
          aria-hidden="true"
          class="css-obfal1"
          data-testid="divider"
        />
      </div>
      <div
        class="css-11icnc2"
      >
        <div
          class="css-104c46d"
          data-testid="article-container"
          style="position: relative;"
        >
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    UPDATED
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    PROFILE
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    ‘American owners pose threat to English pyramid’
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    UPDATED
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    Q&A
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-1i1gqyx"
                data-testid="divider"
              />
            </div>
            <div
              class="css-17cghxi"
            >
              <div
                class="css-122i4mv"
              >
                <span
                  class="css-1g58ijf"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    EXCLUSIVE
                  </div>
                </span>
                <div
                  class="css-lew009"
                >
                  <hr
                    aria-hidden="true"
                    class="css-15kf7hd"
                    data-testid="divider"
                  />
                </div>
                <span
                  class="css-btda8w"
                >
                  <div
                    class="css-gb5m6n"
                  >
                    REVIEW
                  </div>
                </span>
              </div>
              <a
                class="css-17mo6gr"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Blow for rebel clubs as court says Uefa can block Super League
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1osy5lm"
    >
      <div
        class="css-1frprgo"
      >
        <div
          class="css-1g5vzsh"
          id="COMMENT STACK"
        >
          <hr
            aria-hidden="true"
            class="css-obfal1"
            data-testid="divider"
          />
        </div>
        <div
          class="css-1704wtt"
        >
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
              <div
                class="css-eu36n0"
                data-testid="tag-and-flag"
              >
                <span
                  class="css-1vzvkql"
                >
                  3 mins ago
                </span>
              </div>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-clg7cq"
            data-testid="divider"
          />
          <div
            class="css-19w1t19"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-33c418"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="Deborah Haynes 2"
                  class="css-1t6p58q"
                  src="https://www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                  width="77px"
                />
              </picture>
            </div>
            <div
              class="css-lq9usb"
            >
              <a
                class="css-gull0f"
                href="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=2563%2C2563%2C828%2C173"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-65zrxz"
                  >
                    Deborah Haynes 2
                  </span>
                </span>
              </a>
              <p
                class="css-d8s6u6"
              >
                Now is Willis’s chance to show he’s got more to offer than Curry
              </p>
              <div
                class="css-eu36n0"
                data-testid="tag-and-flag"
              >
                <span
                  class="css-1vzvkql"
                >
                  21 mins ago
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
